add admin endpoint and public endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=backend-wording
 
 server.servlet.context-path=/api
-
 server.port=8090
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+# Repertoire de stockage des fichiers JSON (config.json + i18n/)
+# Remplacez par votre chemin absolu, ex: C:/wording-storage
+storage.path=storage
